# Ele-pricing

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT_GUIDE.md  Elevator-Configuration-and-Pricing-Engine.pptx  PRODUCTION_CHECKLIST.md  README.md  RELEASE_NOTES.md  docker-compose.yml  test_logic.py  type-b.txt  type-d.txt
.github/workflows/: backend.yml  frontend.yml  openapi-drift.yml
backend/: .env.example  Dockerfile  dump_openapi.py  elevator_config.db  fix_categories.py  fix_integrity.py  fix_missing_pricing.py  fix_pricing_schema.py  generate_components.py  migrate.py  openapi.json  populate_type_b.py  pyproject.toml  requirements.txt  update_bom_data.py
backend/app/: __init__.py  main.py
backend/app/api/auth/: README.md
backend/app/api/v1/: dependencies.py  errors.py  router.py
backend/app/api/v1/endpoints/: catalogue.py  configuration.py  dashboard.py  export.py  health.py  system.py
backend/app/config_engine/: __init__.py
backend/app/core/: __init__.py  config.py  constants.py  engine_base.py  exceptions.py  logging_config.py  startup.py
backend/app/data/: catalog_metadata.json  categories.json  components.json  dependencies.json  feature_groups.json  feature_mappings.json  feature_options.json  features.json  pricing.json
backend/app/db/: database.py  models.py
backend/app/dependency_engine/: __init__.py  activation.py  conflict_resolver.py  cycle_detector.py  engine.py  executor.py  graph.py  graph_builder.py  graph_cache.py  graph_validator.py  logger.py  registry.py  repository.py  resolver.py  strategies.py  traversal.py  validator.py
backend/app/export/: __init__.py  base_exporter.py  excel_exporter.py  factory.py  json_exporter.py  pdf_exporter.py  registry.py  zip_exporter.py
backend/app/middleware/: __init__.py  request_logging.py  timing.py
backend/app/models/: __init__.py  domain.py
backend/app/pricing/: __init__.py
backend/app/pricing_engine/: __init__.py  bom_resolver.py  calculator.py  context.py  engine.py  logger.py  registry.py  repository.py  tax_calculator.py  validator.py
backend/app/repositories/: __init__.py  base.py  json_repository.py
backend/app/rules/: __init__.py  action_handlers.py  dsl.py  evaluator.py  registry.py  repository.py  validator.py
backend/app/schemas/: __init__.py  base.py  health.py
backend/app/schemas/api/v1/: requests.py  responses.py
backend/app/services/: __init__.py  bom_generator.py  configuration_pipeline.py  quote_generator.py  sqlite_store.py  store.py
backend/app/utils/: __init__.py  catalogue_validator.py  data_loader.py
backend/app/validators/: __init__.py
backend/docs/: architecture.md  configuration-lifecycle.md  data-dictionary.md  performance.md  pricing-engine.md  testing-strategy.md
backend/scripts/: generate_type_d.py
backend/tests/: conftest.py  test_adversarial.py  test_benchmarks.py  test_bom_generator.py  test_bom_traceability.py  test_caching.py  test_catalogue_validator.py  test_config.py  test_configuration_api.py  test_configuration_pipeline.py  test_data_loader.py  test_dependency_engine.py  test_exception_handlers.py  test_export_api.py  test_export_benchmarks.py  test_export_error_handling.py  test_export_excel.py  test_export_idempotency.py  test_export_json.py  test_export_manifest.py  test_export_pdf.py  test_export_readiness.py  test_export_registry.py  test_health.py  test_integration_m2_m3.py  test_openapi.py  test_openapi_snapshot.py  test_pricing_adversarial.py  test_pricing_benchmarks.py  test_pricing_engine.py  test_pricing_integration.py  test_production_acceptance.py  test_quote_generation.py  test_quote_repeatability.py  test_repository.py  test_rule_engine.py  test_rule_engine_extended.py  test_snapshots.py  test_startup.py  test_zip_integrity.py
backend/tests/snapshots/: openapi.json
docs/: architecture.md  conventions.md  module_responsibilities.md  platform_release_certificate.md  production_readiness_report.md  request_flow.md  rest-api.md  setup_instructions.md  system_final_audit.md
docs/adr/: README.md
frontend/: Dockerfile  README.md  eslint.config.js  nginx.conf  package-lock.json  package.json  stats.html  tsconfig.app.json  vite.config.ts
frontend/docs/: accessibility_report.md  bundle-report.md  frontend_api_mapping.md  frontend_component_inventory.md  frontend_dataflow.md  frontend_engineering_handover.md  frontend_final_certificate.md  frontend_module_reference.md  frontend_performance_report.md  frontend_state_map.md  frontend_test_matrix.md  master_architecture_diagram.md  performance-budget.md
frontend/playwright-report/: index.html
frontend/src/: App.tsx
frontend/src/api/: catalogue.ts  client.test.ts  client.ts  configuration.ts  dashboard.ts  export.ts  health.ts  index.ts  quote.ts  system.ts
frontend/src/components/: ConfigSearch.tsx  DataTable.tsx  EmptyState.tsx  ErrorBoundary.tsx  ProtectedRoute.tsx  Skeletons.tsx
frontend/src/layouts/: AppLayout.tsx
frontend/src/lib/: monitoring.ts  queryClient.ts
frontend/src/pages/: BOM.tsx  ConfigDatabase.tsx  Dashboard.tsx  Login.tsx  Pricing.tsx  Quote.tsx  Validation.tsx  Wizard.tsx
frontend/test-results/: .last-run.json
(+10 files in other folders)
